welcome.lessons.welcome.variables.RunHalf.scala.code
override def run() {
}
var Bisc=0
while(!2 * biscuits = caseOrange + 1) {avance()
if (estSurBiscuit()) {Bisc=Bisc+1}}